# vk-ios-notifications

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sample.env  setup.cfg
.github/workflows/: build_app.yml
src/: main.py
src/core/: bark.py  enums.py  exceptions.py  vk.py
src/settings/: config.py  constants.py
